# ai-agent-google-adk-template

./: .gitignore  Agents.md  CURSOR_RULES_SUMMARY.md  README.md
.cursor/: INDEX.md  QUICK_START.md  README.md  RULES_INFO.md
.cursor/rules/: google-adk-template.mdc
resources/: 01-overview.md  02-architecture.md  03-getting-started.md  04-api-reference.md  05-examples-patterns.md  06-deployment.md  07-tools-integrations.md  08-external-resources.md  09-patterns-best-practices.md  10-quality-control-evaluation.md  README.md
templates/: README.md
templates/docs/: CREATION_GUIDE.md  README.md
templates/java/: README.md
templates/java/simple-agent/: .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  env.example  pom.xml
templates/python/: README.md
templates/python/custom-agent/: README.md  env.example  pyproject.toml  run.py
templates/python/custom-agent/deployment/: deploy.py
templates/python/custom-agent/src/custom_agent/: __init__.py  agent.py  sub_agents.py
templates/python/custom-agent/tests/: __init__.py  test_agent.py
templates/python/loop-agent/: README.md  env.example  pyproject.toml  run.py
templates/python/parallel-agent/: README.md  env.example  pyproject.toml  run.py
templates/python/simple-agent/: .gitignore  README.md  env.example  pyproject.toml  run.py
templates/python/simple-agent/deployment/: deploy.py  test_deployment.py
templates/python/simple-agent/docs/: README.md
templates/python/simple-agent/src/simple_agent/: __init__.py  agent.py  tools.py
templates/python/simple-agent/tests/: __init__.py  test_agent.py
(+38 files in other folders)
