[project]
name = "simple-agent"
version = "1.0.0"
description = "Template simple pour agent Google ADK"
authors = ["Google ADK Community"]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
dependencies = [
    "google-adk>=1.3.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
